# tlob-platform

./: .gitignore  250812_FEP.ipynb  250902_comp.ipynb  backtest.py  pyproject.toml  tardis.py  tlob_official_like.py
20250922_191216/: MASTER.json  SUMMARY.csv  SUMMARY.json
20250922_191216/L10-H256-K4-S100-hor10-W5-epsavg_spread-1.0-seed42/: summary.json
20250922_191216/L10-H256-K4-S100-hor10-W5-epsavg_spread-1.0-seed43/: summary.json
20250922_191216/L10-H256-K4-S100-hor10-W5-epsavg_spread-2.0-seed43/: model_config.json  summary.json
20250922_191216/L5-H1024-K4-S100-hor10-W5-epsavg_spread-1.0-seed42/: summary.json
20250922_191216/L5-H1024-K4-S100-hor10-W5-epsavg_spread-1.0-seed43/: summary.json
20250922_191216/L5-H1024-K4-S100-hor10-W5-epsavg_spread-2.0-seed43/: summary.json
20250922_191216/L5-H1024-K4-S100-hor10-W5-epsavg_spread-5.0-seed42/: summary.json
20250922_191216/L5-H1024-K4-S100-hor10-W5-epsavg_spread-5.0-seed43/: summary.json
20250922_191216/L5-H1024-K4-S100-hor10-W5-epszero-seed42/: model_config.json  summary.json
20250922_191216/L5-H1024-K4-S100-hor10-W5-epszero-seed43/: summary.json
20250922_191216/L5-H1024-K4-S100-hor20-W5-epsavg_spread-1.0-seed42/: summary.json
20250922_191216/L5-H1024-K4-S100-hor20-W5-epsavg_spread-1.0-seed43/: summary.json
20250922_191216/L5-H1024-K4-S100-hor20-W5-epsavg_spread-2.0-seed42/: summary.json
20250922_221306/: MASTER.json
20250922_221932/: MASTER.json  SUMMARY.csv  SUMMARY.json
src/: load_model_mock.py  lob_dataset.py  run_tlob_smoke.py  tlob_model.py
(+29 files in other folders)
