[tool.poetry]
name = "smarttrade-lob"
version = "0.1.0"
description = ""
authors = ["koshibatRL <ks3122sft@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.3.1"
tardis-dev = "^2.1.2"
nest-asyncio = "^1.6.0"
numpy = "^2.3.2"
matplotlib = "^3.10.5"
torch = ">=2.0,<2.8"
jupyter = "^1.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
